Closed Bug 1663718 Opened 3 years ago Closed 3 years ago

Crash in [@ OOM | large | xul.dll | NS_internal_main]

Categories

(Core :: Networking: HTTP, defect, P2)

x86
Windows
defect

Tracking

()

RESOLVED FIXED
82 Branch
Tracking Status
firefox-esr68 --- unaffected
firefox-esr78 --- unaffected
firefox80 --- unaffected
firefox81 + verified
firefox82 + fixed

People

(Reporter: philipp, Assigned: kershaw)

References

(Regression)

Details

(Keywords: crash, regression, Whiteboard: [necko-triaged])

Crash Data

Attachments

(1 file)

Crash report: https://crash-stats.mozilla.org/report/index/fdbeebaf-6ce6-4652-bc4e-638380200908

Top 10 frames of crashing thread:

0 xul.dll xul.dll@0x7e9e0c 
1 xul.dll xul.dll@0x3a9aa 
2 xul.dll xul.dll@0x1a3b12 
3 xul.dll xul.dll@0xd0378c 
4 xul.dll xul.dll@0xed22d1 
5 xul.dll xul.dll@0xd64d25 
6 xul.dll xul.dll@0xcde5ee 
7 xul.dll xul.dll@0xcdf51a 
8 xul.dll xul.dll@0x864d6d 
9 xul.dll xul.dll@0x869a66 

these browser crashes are regressing in volume in firefox 81, mostly on google web properties. in 81.0b7 related signatures are accounting for 3% of browser crashes.

this is one way i'm able to reproduce the crash:

bisecting with mozregression leads me to https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=0d22ad297b19d1653b679f731dd929e23d93d2a5&tochange=1cd6d2f9a603ad02a533b12c4602612e90f7da5a and bug 1497249 as having introduced the crash in this instance.

another url that's frequently showing up in crash reports is https://ogs.google.com/u/0/widget/app

Kershaw, can you please take a look at this? Given where we are in the 81 Beta cycle, we may need a quick fix before next week's RC too (is this something we can pref off?).

Flags: needinfo?(kershaw)

(In reply to Ryan VanderMeulen [:RyanVM] from comment #1)

Kershaw, can you please take a look at this? Given where we are in the 81 Beta cycle, we may need a quick fix before next week's RC too (is this something we can pref off?).

I don't know why, but the stacktrace of crash reports are meaningless. It's really difficult to debug.
I'd suggest to backout the patches in https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=0d22ad297b19d1653b679f731dd929e23d93d2a5&tochange=1cd6d2f9a603ad02a533b12c4602612e90f7da5a.

What do you think?

Flags: needinfo?(kershaw) → needinfo?(ryanvm)
Assignee: nobody → kershaw
Severity: -- → S3
Priority: -- → P2
Whiteboard: [necko-triaged]

The 81.0b8 crash rate is significantly lower than previous betas. Looks like the backout worked.

Pushed by kjang@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/a2372b6285d7
Don't put too much data in buffer when the data can't be written to socket r=dragana
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 82 Branch
Regressions: 1673340
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.