Bug 1663718 - Don't put too much data in buffer when the data can't be written to socket r=dragana

The main reason we used too much memory is that we ignore the `NS_BASE_STREAM_WOULD_BLOCK` returned from socket output stream.
When the output stream is blocked, all the data is stored in the output queue and make the memory usage high.

Differential Revision: https://phabricator.services.mozilla.com/D89563